--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,11 @@
-
 services:
   - type: web
-    name: pd-speech-prediction
-    env: docker
-    dockerfilePath: ./Dockerfile
-    region: oregon
+    name: parkinson-speech-prediction
+    runtime: docker
     plan: free
+    buildCommand: |
+      R -e "install.packages('pak', repos = 'https://cloud.r-project.org')"
+      R -e "pak::pak(c('shiny', 'shinydashboard', 'DT', 'plotly', 'ggplot2', 'dplyr', 'patchwork', 'shinyWidgets', 'shinyjs'))"
+    startCommand: R -e "shiny::runApp('app.R', host='0.0.0.0', port=as.numeric(Sys.getenv('PORT', '3838')))"
+    envVars:
+     
