--- a/render.yaml
+++ b/render.yaml
@@ -8,4 +8,5 @@ services:
       R -e "pak::pak(c('shiny', 'shinydashboard', 'DT', 'plotly', 'ggplot2', 'dplyr', 'patchwork', 'shinyWidgets', 'shinyjs'))"
     startCommand: R -e "shiny::runApp('app.R', host='0.0.0.0', port=as.numeric(Sys.getenv('PORT', '3838')))"
     envVars:
-     
+     - key: PORT
+        value: Ww107602240767@
